--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
 	margin: 0;
 	font-size: 16px;
 	font-family: "museo-sans-rounded", sans-serif;
-	color: #333;
 	-webkit-font-smoothing: antialiased;
 	line-height: 140%;
 	background: #ECEEF1;
@@ -45,6 +44,10 @@ hr {
 	background-color: #e9e9e9;
 	height: 1px;
 	border: 0;
+	/*margin-top: 50px;*/
+}
+
+.lead-hr {
 	margin-top: 50px;
 }
 
@@ -66,10 +69,23 @@ p {
   padding: 0;
   border-radius: 6px;
   border-bottom: solid 2px #e9e9e9;
-	background-image: url("images/me.jpg");
 	background-size: 730px;
 	background-repeat: no-repeat;
 	background-position: top;
+}
+
+.home {
+	background-image: url("images/me.jpg");
+}
+
+.img-top {
+	width: 100%;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+}
+
+.img {
+	width: 100%;
 }
 
 .name {
@@ -93,6 +109,14 @@ p {
 
 .content {
 	padding: 8% 8% 0 8%;
+}
+
+.content-sub {
+	padding: 4% 8% 0 8%;
+}
+
+.content-child {
+	padding: 0 8% 0 8%;
 }
 
 .center {
@@ -181,4 +205,27 @@ p {
 
 .png {
 	height: 24px;
+}
+
+.breadcrumb {
+	padding-bottom: 30px;
+	font-size: 12px;
+	color: #8f9394;
+}
+
+.crumb {
+	color: #008fd5;
+	font-weight: bold;
+}
+
+.fig {
+	color: #8f9394;
+	font-size: 12px;
+	text-align: center;
+	margin-top: -6px;
+}
+
+.back-btn {
+	width: 30px;
+	padding-bottom: 30px;
 }
