--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ a:hover {
 h1 {
 	font-size: 30px;
 	color: #39464f;
+	line-height: 36px;
 }
 
 h2 {
@@ -214,7 +215,7 @@ p {
 }
 
 .breadcrumb {
-	padding-bottom: 30px;
+	padding-bottom: 20px;
 	font-size: 12px;
 	color: #8f9394;
 }
@@ -228,10 +229,24 @@ p {
 	color: #8f9394;
 	font-size: 12px;
 	text-align: center;
-	margin-top: -6px;
+	line-height: 20px;
 }
 
 .back-btn {
 	width: 30px;
 	padding-bottom: 30px;
+}
+
+.back-btn-crumb {
+	width: 30px;
+	margin-bottom: -11px;
+	padding-right: 10px;
+}
+
+.back-btn-top {
+	width: 30px;
+	padding-bottom: 30px;
+	position: absolute;
+	left: 40px;
+	top: 20px;
 }
